--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -11,60 +10,52 @@
         android:orientation="vertical">
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/txtName"
+            android:id="@+id/txtSwitch1Detail"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Name"
-            app:errorEnabled="true">
+            android:layout_marginTop="5dp"
+            android:hint="SWITCH 1 DETAIL">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/name"
+                android:id="@+id/etSwitch1Detail"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:editable="false" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/txtSurname"
+            android:id="@+id/txtSwitch1Condition"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Surname"
-            app:errorEnabled="true">
+            android:layout_marginTop="5dp"
+            android:hint="SWITCH 1 CONDITION">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/surname"
+                android:id="@+id/etSwitch1Condition"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:editable="false" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/txtAge"
+            android:id="@+id/txtAction"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Age"
-            app:errorEnabled="true">
+            android:layout_marginTop="5dp"
+            android:hint="Action">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/age"
+                android:id="@+id/etAction"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:editable="false" />
 
         </com.google.android.material.textfield.TextInputLayout>
-
-        <Button
-            android:id="@+id/to_measurement"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#18489B"
-            android:fontFamily="sans-serif-thin"
-            android:textAlignment="center"
-            android:textColor="@android:color/white"
-            android:textSize="24sp"
-            android:gravity="center_horizontal" />
 
     </LinearLayout>
 
